--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,7 +15,6 @@ env:
   # use them to generate a cache key.
   # @see https://static-php.dev/en/guide/cli-generator.html
   PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pcntl,pdo,pdo_sqlite,phar,posix,session,simplexml,sodium,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
-  PHP_LIBRARIES: freetype,libavif,libjpeg,libwebp
   PHP_VERSION: 8.3
   # Don't publish by default. This is overridden for the release branch, below.
   PUBLISH: never
@@ -59,9 +58,7 @@ jobs:
         name: Install dependencies and build PHP
         run: |
           composer install
-          composer exec spc -- doctor
-          composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
-          composer exec spc -- build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
+          composer run build:php
         working-directory: build
 
       - name: Set up Node
