--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,7 +21,6 @@ jobs:
       # use them to generate a cache key.
       # @see https://static-php.dev/en/guide/cli-generator.html
       PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pdo,pdo_sqlite,phar,session,simplexml,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
-      PHP_LIBRARIES: libjpeg,libavif,freetype,libwebp
       PHP_VERSION: 8.3
       # Don't publish by default. This is overridden for the release branch, below.
       PUBLISH: never
@@ -57,9 +56,7 @@ jobs:
           # Temporarily use the dev HEAD of static-php-cli until
           # https://github.com/crazywhalecc/static-php-cli/issues/820 is released (in 2.6.2 or later).
           composer require crazywhalecc/static-php-cli:dev-main
-          composer exec spc -- doctor
-          composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
-          composer exec spc -- build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
+          composer run build:php
         working-directory: build
 
       - name: Set up Node
