--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -59,6 +59,9 @@ jobs:
         run: |
           composer install
           composer run build:php
+        env:
+          # Allows static-php-cli to download its many dependencies more smoothly.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: build
 
       - name: Set up Node
