--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -19,14 +19,17 @@ env:
   # Don't publish by default. This is overridden for the release branch, below.
   PUBLISH: never
 
+# On Linux, we need to build separate versions for x64 and arm64. Their build process is
+# identical; the only difference is what kind of machine they are targeting. So it's all
+# done as a single job, but run as a matrix.
 jobs:
   build:
     name: Build on ${{ matrix.runner }}
     strategy:
       matrix:
         runner:
-          - ubuntu-latest
-          - ubuntu-22.04-arm
+          - ubuntu-latest # x64
+          - ubuntu-22.04-arm # arm64
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
@@ -83,9 +86,10 @@ jobs:
 #          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
 
       - name: Install dependencies
-#       if: steps.cache.outputs.cache-hit != 'true'
+#        if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
+      # If we're on a PR branch, we don't want Electron Builder to publish the app.
       - name: Enable publishing for release branch
         if: github.ref_name == 'main'
         run: |
@@ -93,7 +97,7 @@ jobs:
           # Electron Builder needs a token to publish releases.
           echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
 
-      - name: Extract Composer and make application
+      - name: Make application
         run: |
           cp ./build/buildroot/bin/php ./bin
           chmod +x ./bin/php
