Allow the project root to be overridden at the command line, and a project template fixture directory to be used in development, for testing purposes.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@sentry/electron": "^6.7.0",
-    "get-port": "^7.1.0"
+    "get-port": "^7.1.0",
+    "yargs": "^18.0.0"
   },
   "packageManager": "yarn@4.9.2"
 }
