--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@sentry/electron": "^6.7.0",
+    "electron-log": "^5.4.1",
+    "electron-updater": "^6.6.2",
     "get-port": "^7.1.0",
     "yargs": "^18.0.0"
   },
