Switch to the alpha release channel, and generate update metadata for all channels.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -25,6 +25,9 @@ files:
   # Don't include tests in the packaged app.
   - '!**/tests/**'
 
+# @see https://www.electron.build/tutorials/release-using-channels
+generateUpdateFilesForAllChannels: true
+
 nsis:
   # This is only applicable to the one-click installer, which is what we build on
   # Windows. When we uninstall, it should clean up entirely.
