--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -54,7 +54,9 @@ jobs:
         name: Install dependencies and build PHP
         run: |
           composer install
-          composer run build:php
+          composer exec spc -- doctor
+          composer exec spc -- download --with-php=${{ env.PHP_VERSION }} --for-extensions=${{ env.PHP_EXTENSIONS }} --prefer-pre-built
+          composer exec spc -- build ${{ env.PHP_EXTENSIONS }} --build-cli --with-libs=freetype,libavif,libjpeg,libwebp --debug
         env:
           # Allows static-php-cli to download its many dependencies more smoothly.
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
