--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Make application
         run: |
           composer run assets --working-dir=build
-          cp -f ./build/buildroot/bin/php.exe ./bin
+          Copy-Item -Force ./build/buildroot/bin/php.exe ./bin
           npx electron-vite build
           npx electron-builder --publish=${{ env.PUBLISH }}
         env:
@@ -105,7 +105,6 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        shell: bash
 
       # For manual testing, upload the final artifact if we're not in a release branch.
       - name: Upload distributable
