--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -82,7 +82,9 @@ jobs:
 
       - name: Install dependencies
 #        if: steps.cache-yarn.outputs.cache-hit != 'true'
-        run: yarn install
+        run: |
+          composer run assets --working-dir=build
+          yarn install
 
       # If we're on a PR branch, we don't want Electron Builder to publish the app.
       # On Windows, adding environment variables in PowerShell has a special syntax: see https://github.com/orgs/community/discussions/25713
@@ -95,7 +97,7 @@ jobs:
 
       - name: Make application
         run: |
-          composer run assets --working-dir=build
+          Remove-Item -Recurse -Force ./bin/php.exe
           Copy-Item -Force ./build/buildroot/bin/php.exe ./bin
           npx electron-vite build
           npx electron-builder --publish=${{ env.PUBLISH }}
