Install browser dependencies

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,4 +38,4 @@ jobs:
         run: |
           composer run assets --working-dir=build
           yarn install
-          ls -l bin
+          npx playwright install firefox --with-deps
