Add actual test step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,6 @@ jobs:
           composer run assets --working-dir=build
           yarn install
           npx playwright install firefox --with-deps
+
+      - name: Run tests
+        run: npx playwright test
