--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,3 +42,12 @@ jobs:
 
       - name: Run tests
         run: npx playwright test
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: |
+            playwright-report/
+            test-results/
+          retention-days: 7
