--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -74,24 +74,16 @@ jobs:
         with:
           node-version: latest
 
-      - name: Set up Yarn
-        run: |
-          corepack enable
-          yarn set version berry
-
-# Dependency caching is temporarily disabled due to https://github.com/npm/cli/issues/4828.
-#      - name: Cache dependencies
-#        id: cache
-#        uses: actions/cache@v4
-#        with:
-#          path: node_modules
-#          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: npm-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
-#        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          composer run assets --working-dir=build
-          yarn install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install
 
       # If we're on a PR branch, we don't want Electron Builder to publish the app.
       - name: Enable publishing for release branch
@@ -103,6 +95,7 @@ jobs:
 
       - name: Make application
         run: |
+          composer run assets --working-dir=build
           cp -f ./build/buildroot/bin/php ./bin
           chmod +x ./bin/php
           npx electron-vite build
