--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -108,7 +108,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: npm-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          key: npm-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
