--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -67,24 +67,16 @@ jobs:
         with:
           node-version: latest
 
-      - name: Set up Yarn
-        run: |
-          corepack enable
-          yarn set version berry
-
-# Dependency caching is temporarily disabled due to https://github.com/npm/cli/issues/4828.
-#      - name: Cache dependencies
-#        id: cache-yarn
-#        uses: actions/cache@v4
-#        with:
-#          path: node_modules
-#          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: npm-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
-#        if: steps.cache-yarn.outputs.cache-hit != 'true'
-        run: |
-          composer run assets --working-dir=build
-          yarn install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install
 
       # If we're on a PR branch, we don't want Electron Builder to publish the app.
       # On Windows, adding environment variables in PowerShell has a special syntax: see https://github.com/orgs/community/discussions/25713
@@ -97,6 +89,7 @@ jobs:
 
       - name: Make application
         run: |
+          composer run assets --working-dir=build
           Remove-Item -Recurse -Force ./bin/php.exe
           Copy-Item -Force ./build/buildroot/bin/php.exe ./bin
           npx electron-vite build
