--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A quick-start launcher for Drupal CMS.",
   "main": "./out/main/main.js",
   "scripts": {
-    "start": "electron-vite preview"
+    "start": "electron-vite preview",
+    "test": "electron-vite build && playwright test"
   },
   "author": "Drupal Association",
   "license": "MIT",
