--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         os:
           - macos-latest
+          # Testing on Linux is temporarily disabled until we can figure out the SUID sandboxing issue.
+          # - ubuntu-latest
+          - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
