--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    # Run this workflow at 9 AM UTC every day.
+    - cron: '0 9 * * *'
   workflow_dispatch:
 
 jobs:
