--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       matrix:
         os:
-          # - macos-latest
+          - macos-latest
           # Testing on Linux is temporarily disabled until we can figure out the SUID sandboxing issue.
           # - ubuntu-latest
           - windows-latest
