Experiment with xvfb-run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,7 @@ jobs:
       matrix:
         os:
           - macos-latest
-          # Testing on Linux is temporarily disabled until we can figure out the SUID sandboxing issue.
-          # - ubuntu-latest
+          - ubuntu-latest
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
@@ -49,7 +48,18 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
+      - name: Run tests with xvfb
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          composer run assets --working-dir=build
+          xvfb-run -a npm test
+        env:
+          DISPLAY: ':99'
+
       - name: Run tests
+        if: runner.os != 'Linux'
         run: |
           composer run assets --working-dir=build
           npm run test
