--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-log": "^5.4.1",
     "electron-updater": "^6.6.2",
     "get-port": "^7.1.0",
+    "winston": "^3.17.0",
     "yargs": "^18.0.0"
   }
 }
