--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.0",
+    "@types/yargs": "^17.0.33",
     "electron": "^37.2.3",
     "electron-builder": "^26.0.16",
     "electron-vite": "^3.1.0",
