--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -16,6 +16,7 @@ extraResources:
   # In conjunction with `files` below, ensure that the PHP and Composer executables
   # are in the app's resources directory, not the ASAR archive.
   - 'bin/**'
+  - prebuilt.tgz
   - settings.local.php
 
 files:
