--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -146,6 +146,23 @@ jobs:
           mkdir -p ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
           cp $PROVISION_PROFILE_PATH ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
 
+      - name: Create universal PHP binary
+        run: |
+          composer run assets --working-dir=build
+          # Generate a universal binary of the PHP interpreter.
+          lipo -create ./build/php-X64 ./build/php-ARM64 -output ./bin/php
+          chmod +x ./bin/php
+
+      - name: Pre-build Drupal site
+        run: |
+          npx electron-vite build
+          npx electron . --root=drupal --no-server
+          find drupal -depth -type d -name tests -exec rm -r -f {} ';'
+          tar -c -z -f prebuilt.tar.gz --directory=drupal .
+          rm -r -f drupal
+        env:
+          CI: 'true'
+
       # If we're on a PR branch, we don't want Electron Builder to publish the app.
       - name: Enable notarization and publishing for the release branch
         if: github.ref_name == 'main'
@@ -158,14 +175,8 @@ jobs:
           # Electron Builder needs a token to publish releases.
           echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
 
-      - name: Create universal PHP binary and make application
-        run: |
-          composer run assets --working-dir=build
-          # Generate a universal binary of the PHP interpreter.
-          lipo -create ./build/php-X64 ./build/php-ARM64 -output ./bin/php
-          chmod +x ./bin/php
-          npx electron-vite build
-          npx electron-builder --universal --publish=${{ env.PUBLISH }}
+      - name: Make application
+        run: npx electron-builder --universal --publish=${{ env.PUBLISH }}
 
       # For manual testing, upload the final artifact if we're not in a release branch.
       - name: Upload distributable
